--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -15,5 +15,7 @@ Code
   <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">is</a>
 
     <code>Language</code>!
+    
+    And language is code
 
       <a href = "w1.html">--></a>  
