--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -16,6 +16,6 @@ Code
 
     <code>Language</code>!
     
-    And language is code
+    And language is code!
 
       <a href = "w1.html">--></a>  
