--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -15,6 +15,10 @@
   creating by exertion of the imagination."
    <a href = "https://en.wikipedia.org/wiki/Fred_Brooks">Fred Brooks</a>
 </blockquote>
+
+<blockquote>
+     "I is a potato"
+</blockquote>
     
 <blockquote>
   "A programmer is ideally an essayist who works with traditional
