--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -17,7 +17,8 @@
 </blockquote>
 
 <blockquote>
-     "I is a potato" Thomas Jefferson
+     "I is a potato" 
+     <a rhef = https://en.wikipedia.org/wiki/Earth>Thomas Jefferson</a>
 </blockquote>
     
 <blockquote>
