--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -18,7 +18,7 @@
 
 <blockquote>
 "I is a potato" 
-<a href = "https://en.wikipedia.org/wiki/Earth">Thomas Jefferson</a>
+<a href = "https://en.wikipedia.org/wiki/ThomasJeferson">Thomas Jefferson</a>
 </blockquote>
     
 <blockquote>
